--- a/src/demo/templates/demo/index.html
+++ b/src/demo/templates/demo/index.html
@@ -230,7 +230,7 @@ FONTS & ICONS
 							<div class="col-md-8">
                                 <div class="file" style="margin-top: 3px;">
                                     <span id="file_name">Please Select Reference Table from Your Computer...</span>
-                                    <input id="file" type="file" name="file" onchange="handleFiles(event)" multiple title="Upload your files">
+                                    <input id="file" type="file" name="file" onchange="handleFiles(this.files)" multiple title="Upload your files">
                                 </div>
 							</div>
 							<div class="col-md-4">
