--- a/src/demo/templates/demo/index.html
+++ b/src/demo/templates/demo/index.html
@@ -763,6 +763,7 @@ FONTS & ICONS
 		processData: false,
 		contentType: false,
 		data: formData,
+		topic: topic,
 		success: function(result) {
 			// Iterate over the filenames array
 			for (let i = 0, len = result['filenames'].length; i < len; i++) {
