--- a/src/demo/templates/demo/index.html
+++ b/src/demo/templates/demo/index.html
@@ -366,7 +366,7 @@ FONTS & ICONS
 				<input placeholder="Please input your categorization standard" class="form-control", id="taxonomy_standard", name="taxonomy_standard">
 				<p></p>
 				<p></p>
-				<input class="btn btn-default" onclick="display_taxonomy()" value="Automatic Categorization" style="width: 200px; margin-left:40%">
+				<input type="button" class="btn btn-default" onclick="display_taxonomy()" value="Automatic Categorization" style="width: 200px; margin-left:40%">
 			</div>
 		</form>
 
@@ -411,7 +411,7 @@ FONTS & ICONS
 	</div>
 
 	<div class="col-md-12" style="display: none" id="generate_content_button">
-		<input class="btn btn-default" onclick="display_select_sections()" value="Confirm and Generate Survey Content" style="width: 300px; margin-left:35%">
+		<input type="button" class="btn btn-default" onclick="display_select_sections()" value="Confirm and Generate Survey Content" style="width: 300px; margin-left:35%">
 	</div>
 
 
@@ -441,7 +441,7 @@ FONTS & ICONS
 
 		<br>
 		<div style="text-align: center">
-			<input class="btn btn-default" onclick="select_sections()" value="Confirm">
+			<input type="button" class="btn btn-default" onclick="select_sections()" value="Confirm">
 		</div>
 	</div>
 
@@ -466,7 +466,7 @@ FONTS & ICONS
 		</form>
 		<br>
 		<div style="text-align: center">
-			<input class="btn btn-default" onclick="display_survey()" value="Confirm">
+			<input type="button" class="btn btn-default" onclick="display_survey()" value="Confirm">
 		</div>
 	</div>
 
